<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">
    <!-- A CardView that contains a TextView -->

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            card_view:cardCornerRadius="8dp"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:cardElevation="0dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"

                android:paddingTop="50dp"
                android:paddingHorizontal="16dp"
                android:paddingBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/name"
                    android:text="@string/pokemon_name_sample_text"
                    android:textSize="30sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/weight"
                    android:text="@string/pokemon_weight_sample_text"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/height"
                    android:text="@string/pokemon_height_sample_text"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

</RelativeLayout>