<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        card_view:cardCornerRadius="8dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/pokemon_name_search_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="24sp"
            android:hint="@string/search_box_hint"/>

        <Button
            android:id="@+id/btn_pokemon_name_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_button_text"
            android:textSize="22sp"/>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_search_results"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tv_error_message"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:padding="16dp"
                android:visibility="invisible"
                android:text="@string/loading_error"/>

            <ProgressBar
                android:id="@+id/pb_loading_indicator"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginTop="32dp"
                android:visibility="invisible"/>
        </FrameLayout>

    </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>